--- a/README.rdoc
+++ b/README.rdoc
@@ -5,6 +5,7 @@
 == DESCRIPTION:
 
 It is a worker-side Beanstalk-based job-queueing dispatcher
+
 This is a pre-release, I will complete tests and docs in couple days
 
 == REQUIREMENTS:
@@ -17,7 +18,9 @@ beanstalk-client
     $ beanworker <jobs.rb> <host:port|path/to/file.yml> [-d|--daemonize [-m|--monitor] [-P|--pid <path/to/pid/dir>] ]
 
 -d|--daemonize - process will go in background
+
 -m|--monitor   - process will be started with monitor, that will restart it when it crushes
+
 -P|--pid       - path to the directory, where pid-file(s) will be saved, default is current directory
 
 == DSL
@@ -58,7 +61,16 @@ jobs.rb:
 
 == API:
 
-TODO
+RDoc will be later
+
+Beanworker::Worker.perform number_of_threads, *jobs_names_to_listen
+
+Beanworker::Worker.schedule method_name, period_to_run_in_secs, options={}, *args_to_method
+
+options are:
+ - at: if period is in days (p % 1.day == 0), job will be performed exact at this time
+ - timeout: job will be killed if it performs more than this time in secs
+
 
 == INSTALL:
 
